*Empty MediaWiki Message*

--- a/عبدالفتاح_ابو_غده.mw
+++ b/عبدالفتاح_ابو_غده.mw
@@ -1,6 +1,14 @@
 داسلامی امت ځلانده څیری شیخ عبد الفتاح أبو غدة
 
-د اسلامی امت روښانه او ځلانده تاریخپاڼی یا خو د حق پالو علماوو پر زیار او سیاهی او یا هم د هغو سپیڅلو شهیدانو په وینو اړول شوی کوم چی خپل اوچت عقلونه ‎او رسا پوهی د ویدو ولسونو د ویښولو ا و یا هم د لیار ورکو د لارښوونی لپاره مصرف وی. ددغسی اتلانو یاد د هغه مشهور تابعی سفیان بن عیینة رحمة الله علیه وینا ده چی : (موږ ته د خپلو لارښوونکو یاد د برکت او رحمت د راښکون لامل وه) د اسلامی امت د دغو اتلانو له لړه یو هم پیاوړی عالم دین، د سنتو ستر مدافع، نامتو داعی او فقیه شیخ عبدالفتاح ابو غدة وه. شیخ ابو زاهد عبدالفتاح بن محمد بشیر چی د نسب سلسله یی ستر صحابی خالد بن ولید (رض) ته رسی په ۱۹۱۷ م کال یی د لرغونی شام (اوسنی سوریه) شمال ته څیرمه د حلب نومی ښار په یوی مشهوری دین داری او بډایی کورنۍ په غیږ کی سترګې پرانیستی کومه چې د اوبدونکو مصنوعاتو په سوداګرې بوخته وه. شیخ ابو غذة په اته کلنی کی خپلی لومړنی زده کړی د المدرسة العربیة الاسلامیة الخاصة له انګړه پیل کړه چی تر څنګ یی د حلب د مشهوری شیخ محمد علی الخطیب په مدرسه کی د قرآن کریم او خط زده کړی هم ترسره کولی، هغه بیا د ثانوی زده کړو لپاره د حلب مشهوره مدرسة (الخسرویة) غوره کړه چې له هماغه وخته پری د زیرکتیا او نبوغ نښی څرګندی وی او په ۱۹۴۲ م کی یی تری په اوچته درجه بری لیک ترلاسه کړ. شیخ ابو غدة د خپلو لوړو زده کړو لپاره د مصر د الازهر اسلامی پوهنتون د شرعیاتوپوهنځی غوره کړ او په ۱۹۴۸ کی یی تری په بریالتیوب بری لیک تر لاسه کړ. په ۱۹۵۰ کی شیخ د عربی ژبی په ادبیاتو کی د تدریس د اصولو په تخصص کی ماستری هم له همدغه پوهنتونه ترلاسه کړه. شیخ ابو غدة خپل پلرنی ټاټوبی حلب ته په رسیدو د خپل دینی مسوولیت په درکولو کابو یولس کاله د حلب په بیلابیلو مدرسو او لیسو کی د اسلامی ښوونی د استاذ په صفت دنده پر مخ بیوله چی مهمی مدرسی یی عبارت له: الشعبانیة او الخسرویة ځخه دی. هغه د تدریس تر څنګ د پوهنی په وزارت کی د دینی ښوونی د نصاب په تیارولو کی هم فعاله ونډه درلوده چی د همدی امله د دمشق پوهنتون د شرعیاتو د پوهنځی د اصول فقه، حنفی فقهی او د مذاهبو د مقایسوی فقهو د استاد په صفت وګمارل شو. هغه د تدریس ترڅنګ په دی پړاو کی ددی پوهنځی په نوښت د اسلامی فقهی د موسوعی غړیتوب هم ترلاسه کړ. استاذ عبدالفتاح ابوغدة له دی وروسته د سعودی عربستان د ریاض د ښار د امام محمد بن سعود د اسلامی پوهنتون او د قاضیانو په عالی انسټیټیوټ کی د ۱۹۶۵ نه تر ۱۹۸۸م پوری د استاذ په صفت وظیفه پر مخ بیوله او په دی ترڅ کی یی د ډیرو علمی رسالو لکه ماسټری او دوکتورا ګانو باندی د څارونکی استاذ په صفت دنده هم پر غاړه وه، چې بیا د همدغو علمی خدمتونو لپاره د امام محمد بن سعود د پوهنتون د علمی مجلس غړی هم وټاکل شو. استاذ ابوغدة د علم او پوهی د سمندر یو لالهانده تږی و ، تل د علمی مناظرو او مناقشو لیواله او د همدی مقصد لپاره یی د ګڼو اسلامی هیوادونو له علماوو سره بحث او مناقشی ته کیناست چی ځینی یی عبارت دی له:د عثمانی خلافت پخوانی شیخ الاسلام شیخ مصطفی صبری، شیخ زاهد کوثری، د عراق مشهور محدث امجد الزهاوی، دهند په نیمه وچه کی مولانا محمد زکریا کاندهلوی، مولانا محمد یوسف کاندهلوی، شیخ ابوالحسن ندوی، مفتی محمد شفیع،... شیخ ابوغدة د خپلو هم عصرو علماوو په ژبه د ښی څیری او غوره اخلاقو خاوند و، د اسلامی آدابو پیاوړی مدافع او ساتونکی و، د علم ستر سمندر و چې تر څنګ یی په شخصیت تواضع او عاجزی غالبه وه. هغه په خپلو کتابونو کی د خپل نظر سره هیڅکله حتی د جمع ضمیر نه استعمالوه. یو وار په کوم مجلس کی کوم ګډون کوونکی شیخ ابو غدة د امام ابو حنیفه رحمة الله علیه سره تشبیه کړ چی له امله یی د شیخ مخ سور شو او په غوسه یی وویل: زه چیرته او هغه چیرته، زه د امام ابوحنیفه دپښو ګرد ته هم نشم رسیدای. شیخ ابوغدة د خوږو خبرو او رسا نظر څښتن و، ناست کس به یی له خپل مجلس نه اغیز کی راوست او خپل ځان ته به یی راجذب کړ. خپل وخت یی تل علم او عبادت ته وقف کړی و او پر ژبه یی د الله ذکر پروت و. پیاوړی داعی استاد سعید حوی دده په اړه وایی: په اوسنی زمانه کی چې زه ګورم ښایی ددی آیت تطابق پر شیخ ابوغدة وی کوم کی چی الله تعالی فرمایی (و اذا تتلی علیهم آیت الرحمن خروا سجداْ وبکیا) او کله چی پر دوی زموږ ایاتونه ولوستل شی نو پر سجدو او ژړاو پریوځی. شیخ ابوغدة د اسلامی دعوت او اسلامی ویښتابه په برخه کی هم فعاله ونډه درلوده، هغه په مصر کی د خپل تحصیل له وخته د اسلامی نړۍ د خوځښتونو د سالار شهید امام حسن البنا د اسلامی فکر نه الهام اخیستی و او هغه د خپل لارښود اوامام ‎په توګه پیژنی. مرحوم استاذ په دی عقیده و چی اسلام د بشریت د ټولو رنځونو درمان دی چی هم دین او هم دولت. هغه اوملګرو یی لکه شیخ مصطفی السباعی ، استاد سعید حوی همدغه رسا او ځلانده فکر له مصره خپل ټاټوبی ته راولیږداوه او د دارالارقم په نوم یی د لومړی اسلامی مرکز بنسټ کیښود چی بیا یی ددی فکر په خپرولو او د ښکیلاک او سیکولریستی سوسیالستی افکارو په له منځه وړلو او مقابله کی لالهانده هڅی وکړی. استاذ د شیخ مصطفی السباعی نه وروسته دوه دوری د اخوان د ګوند د لارښود په توګه دنده پرمخ بیوله چی په ښه توګه یې سرته ورسولهاستاد ابو غدة هیڅکله دعوتی او ډله ییز اسلامی کارونه د علمی او اکاډمیکو کارونو خنډ نه بولی، بلکی د یو دعوتګر لپاره تر ټولو وړاندی دعلم جامه ضرور او لازمه ګڼی. هغه د ډیرو علمی مصروفیاتو سره سره په اسلامی دعوت کی تل فعال حضور درلود او دعامو او خاصو خلکو محبوبیت یی لاس ته راوړی و او په ۱۹۶۱ کی د حلب له ښاره د پارلمان د ا ستازی په توګه غوره شو. استاذ ابوغدة ددعوت په لاره کی ډیری لالهاندۍ ګاللی چی په همدی سلسله کی یو وار ۱۹۶۰ کی د (تدمرصحرا) په جیل کی ۱۱ میاشتی بند تیر کړ، هغه یو صابر او بردبار انسان و چی دوخت د فاسد رژیم ټولی ناخوالی یی په پراخه سینی وګاللی اوهیڅکله یی ددوی غوښتنو ته سر ټیت نکړ. استاذ ابوغدة په ۱۹۷۸ کی د سوریی له خاوری ووت او د سعودی په خاوره کی یی میشتیدنه غوره کړه، هغه په خپلی جلاوطنی کی دعلم تر څنګ د اسلامی امت قضایاوو ته ځان وقف کړی و. استاد ابوغدة د استاد حسن حبنکه المیدانی نه وروسته د سوریی له هیواده د رابطة العالم اسلامی موسسی د تاسییس مجلس غړی وګرځید او له همدی منبره یی د ډیرو اسلامی قضیو څخه په میړانه دفاع کړی. شیخ عبدالفتاح ابو غدة د اسلامی امت یو له هغو عالمانو څخه و چی د افغانستان سپیڅلی جهاد نه یی په میړانه دفاع کړی او دایی د مسلمانانو دعزت او برم لامل ګاڼه، هغه څو ځلی ویلی چی: د افغانستان جهاد د مسلمانانو سر اوچت کړی دی شیخ ابو غدة به وخت پر وخت د اسلامی نړۍ د ګوټ ګوټ هیوادونو لکه سودان، یمن، هند، پاکستان، اردن، ترکیه، الجزایر، عراق، قطر او اروپایی هیوادونو ته سفر کاوه او علمی او دعوتی سمینارونو کی به یی برخه اخیسته. شیخ ابوغدة ۱۹۹۵ کال کی د لندن د اکسفورډ د اسلامی مطالعاتو د مرکز لخوا د اسلام د تعریف او د حدیثو د خدمت په ویاړ د سلطان برنای د جایزی ګټونکی شو، او په همدی کال د سوریی د پخوانی ولسمشر حافظ الاسد لخوا ورته شیخ محمد سعید رمضان البوطی د منځګړی په حیث ولیږل شو چی په دی توګه یی خپله ۱۷ کلنه جلاوطنی پای ته ورسوله. شیخ ابوغدة دخپل ژوند وروستی کلونه هم د اسلام او علم خدمت ته وقف کړی و او خپل ډیر وخت یی تحقیق او تالیف ته ځانګړی کړی و. د هغه ځانګړنه په دی کی نغښتی وه چی خپل کتاب به یی له ښی کره کتنی وروسته راویست او د یو کتاب له تحقیق سره به یی خپله ځانګړی حاشیه اوفواید هم پری اضافه کول. شیخ ابوغدة د حدیثو، فقهی، تصوف، اصول حدیث، اصول فقه او جرح تعدیل په علمونو کی بډایه تصنیفات ترسره کړی چی ځینی یی په لاندی ډول دی: o الرفع و التکمیل فی الجرح والتعدیل للامام الکنوی (تحقیق) o التصریح بما تواتر فی نزول المسیح لمحمد انورشاه کشمیری (تحقیق) o رسالة المسترشدین للامام المحاسبی (تحقیق) o تحقیق سنن النسایی o الاسناد من الدین o من آداب الاسلام شیخ ابوغدة بالاخره د ۸۰ کالو په عمر د یو اوږد خدمت او جهاد نه وروسته د ۱۹۹۶ کال ددسمبر په میاشت کی د ورپیښی ناروغۍ نه د سعودی عربستان د ملک فیصل روغتون ته راوړل شو او د ۱۹۹۷ د فبروری د میاشتی په ۱۶مه د ابدی سفر په لور رخصت شو. رحمة الله علیه 
+د اسلامی امت روښانه او ځلانده تاریخپاڼی یا خو د حق پالو علماوو پر زیار او سیاهی او یا هم د هغو سپیڅلو شهیدانو په وینو اړول شوی کوم چی خپل اوچت عقلونه ‎او رسا پوهی د ویدو ولسونو د ویښولو ا و یا هم د لیار ورکو د لارښوونی لپاره مصرف وی. ددغسی اتلانو یاد د هغه مشهور تابعی سفیان بن عیینة رحمة الله علیه وینا ده چی : (موږ ته د خپلو لارښوونکو یاد د برکت او رحمت د راښکون لامل وه) د اسلامی امت د دغو اتلانو له لړه یو هم پیاوړی عالم دین، د سنتو ستر مدافع، نامتو داعی او فقیه شیخ عبدالفتاح ابو غدة وه. شیخ ابو زاهد عبدالفتاح بن محمد بشیر چی د نسب سلسله یی ستر صحابی خالد بن ولید (رض) ته رسی په ۱۹۱۷ م کال یی د لرغونی شام (اوسنی سوریه) شمال ته څیرمه د حلب نومی ښار په یوی مشهوری دین داری او بډایی کورنۍ په غیږ کی سترګې پرانیستی کومه چې د اوبدونکو مصنوعاتو په سوداګرې بوخته وه. شیخ ابو غذة په اته کلنی کی خپلی لومړنی زده کړی د المدرسة العربیة الاسلامیة الخاصة له انګړه پیل کړه چی تر څنګ یی د حلب د مشهوری شیخ محمد علی الخطیب په مدرسه کی د قرآن کریم او خط زده کړی هم ترسره کولی، هغه بیا د ثانوی زده کړو لپاره د حلب مشهوره مدرسة (الخسرویة) غوره کړه چې له هماغه وخته پری د زیرکتیا او نبوغ نښی څرګندی وی او په ۱۹۴۲ م کی یی تری په اوچته درجه بری لیک ترلاسه کړ. شیخ ابو غدة د خپلو لوړو زده کړو لپاره د مصر د الازهر اسلامی پوهنتون د شرعیاتوپوهنځی غوره کړ او په ۱۹۴۸ کی یی تری په بریالتیوب بری لیک تر لاسه کړ. په ۱۹۵۰ کی شیخ د عربی ژبی په ادبیاتو کی د تدریس د اصولو په تخصص کی ماستری هم له همدغه پوهنتونه ترلاسه کړه. شیخ ابو غدة خپل پلرنی ټاټوبی حلب ته په رسیدو د خپل دینی مسوولیت په درکولو کابو یولس کاله د حلب په بیلابیلو مدرسو او لیسو کی د اسلامی ښوونی د استاذ په صفت دنده پر مخ بیوله چی مهمی مدرسی یی عبارت له: الشعبانیة او الخسرویة ځخه دی. هغه د تدریس تر څنګ د پوهنی په وزارت کی د دینی ښوونی د نصاب په تیارولو کی هم فعاله ونډه درلوده چی د همدی امله د دمشق پوهنتون د شرعیاتو د پوهنځی د اصول فقه، حنفی فقهی او د مذاهبو د مقایسوی فقهو د استاد په صفت وګمارل شو. هغه د تدریس ترڅنګ په دی پړاو کی ددی پوهنځی په نوښت د اسلامی فقهی د موسوعی غړیتوب هم ترلاسه کړ. استاذ عبدالفتاح ابوغدة له دی وروسته د سعودی عربستان د ریاض د ښار د امام محمد بن سعود د اسلامی پوهنتون او د قاضیانو په عالی انسټیټیوټ کی د ۱۹۶۵ نه تر ۱۹۸۸م پوری د استاذ په صفت وظیفه پر مخ بیوله او په دی ترڅ کی یی د ډیرو علمی رسالو لکه ماسټری او دوکتورا ګانو باندی د څارونکی استاذ په صفت دنده هم پر غاړه وه، چې بیا د همدغو علمی خدمتونو لپاره د امام محمد بن سعود د پوهنتون د علمی مجلس غړی هم وټاکل شو. استاذ ابوغدة د علم او پوهی د سمندر یو لالهانده تږی و ، تل د علمی مناظرو او مناقشو لیواله او د همدی مقصد لپاره یی د ګڼو اسلامی هیوادونو له علماوو سره بحث او مناقشی ته کیناست چی ځینی یی عبارت دی له:د عثمانی خلافت پخوانی شیخ الاسلام شیخ مصطفی صبری، شیخ زاهد کوثری، د عراق مشهور محدث امجد الزهاوی، دهند په نیمه وچه کی مولانا محمد زکریا کاندهلوی، مولانا محمد یوسف کاندهلوی، شیخ ابوالحسن ندوی، مفتی محمد شفیع،... شیخ ابوغدة د خپلو هم عصرو علماوو په ژبه د ښی څیری او غوره اخلاقو خاوند و، د اسلامی آدابو پیاوړی مدافع او ساتونکی و، د علم ستر سمندر و چې تر څنګ یی په شخصیت تواضع او عاجزی غالبه وه. هغه په خپلو کتابونو کی د خپل نظر سره هیڅکله حتی د جمع ضمیر نه استعمالوه. یو وار په کوم مجلس کی کوم ګډون کوونکی شیخ ابو غدة د امام ابو حنیفه رحمة الله علیه سره تشبیه کړ چی له امله یی د شیخ مخ سور شو او په غوسه یی وویل: زه چیرته او هغه چیرته، زه د امام ابوحنیفه دپښو ګرد ته هم نشم رسیدای. شیخ ابوغدة د خوږو خبرو او رسا نظر څښتن و، ناست کس به یی له خپل مجلس نه اغیز کی راوست او خپل ځان ته به یی راجذب کړ. خپل وخت یی تل علم او عبادت ته وقف کړی و او پر ژبه یی د الله ذکر پروت و. پیاوړی داعی استاد سعید حوی دده په اړه وایی: په اوسنی زمانه کی چې زه ګورم ښایی ددی آیت تطابق پر شیخ ابوغدة وی کوم کی چی الله تعالی فرمایی (و اذا تتلی علیهم آیت الرحمن خروا سجداْ وبکیا) او کله چی پر دوی زموږ ایاتونه ولوستل شی نو پر سجدو او ژړاو پریوځی. شیخ ابوغدة د اسلامی دعوت او اسلامی ویښتابه په برخه کی هم فعاله ونډه درلوده، هغه په مصر کی د خپل تحصیل له وخته د اسلامی نړۍ د خوځښتونو د سالار شهید امام حسن البنا د اسلامی فکر نه الهام اخیستی و او هغه د خپل لارښود اوامام ‎په توګه پیژنی. مرحوم استاذ په دی عقیده و چی اسلام د بشریت د ټولو رنځونو درمان دی چی هم دین او هم دولت. هغه اوملګرو یی لکه شیخ مصطفی السباعی ، استاد سعید حوی همدغه رسا او ځلانده فکر له مصره خپل ټاټوبی ته راولیږداوه او د دارالارقم په نوم یی د لومړی اسلامی مرکز بنسټ کیښود چی بیا یی ددی فکر په خپرولو او د ښکیلاک او سیکولریستی سوسیالستی افکارو په له منځه وړلو او مقابله کی لالهانده هڅی وکړی. استاذ د شیخ مصطفی السباعی نه وروسته دوه دوری د اخوان د ګوند د لارښود په توګه دنده پرمخ بیوله چی په ښه توګه یې سرته ورسولهاستاد ابو غدة هیڅکله دعوتی او ډله ییز اسلامی کارونه د علمی او اکاډمیکو کارونو خنډ نه بولی، بلکی د یو دعوتګر لپاره تر ټولو وړاندی دعلم جامه ضرور او لازمه ګڼی. هغه د ډیرو علمی مصروفیاتو سره سره په اسلامی دعوت کی تل فعال حضور درلود او دعامو او خاصو خلکو محبوبیت یی لاس ته راوړی و او په ۱۹۶۱ کی د حلب له ښاره د پارلمان د ا ستازی په توګه غوره شو. استاذ ابوغدة ددعوت په لاره کی ډیری لالهاندۍ ګاللی چی په همدی سلسله کی یو وار ۱۹۶۰ کی د (تدمرصحرا) په جیل کی ۱۱ میاشتی بند تیر کړ، هغه یو صابر او بردبار انسان و چی دوخت د فاسد رژیم ټولی ناخوالی یی په پراخه سینی وګاللی اوهیڅکله یی ددوی غوښتنو ته سر ټیت نکړ. استاذ ابوغدة په ۱۹۷۸ کی د سوریی له خاوری ووت او د سعودی په خاوره کی یی میشتیدنه غوره کړه، هغه په خپلی جلاوطنی کی دعلم تر څنګ د اسلامی امت قضایاوو ته ځان وقف کړی و. استاد ابوغدة د استاد حسن حبنکه المیدانی نه وروسته د سوریی له هیواده د رابطة العالم اسلامی موسسی د تاسییس مجلس غړی وګرځید او له همدی منبره یی د ډیرو اسلامی قضیو څخه په میړانه دفاع کړی. شیخ عبدالفتاح ابو غدة د اسلامی امت یو له هغو عالمانو څخه و چی د افغانستان سپیڅلی جهاد نه یی په میړانه دفاع کړی او دایی د مسلمانانو دعزت او برم لامل ګاڼه، هغه څو ځلی ویلی چی: د افغانستان جهاد د مسلمانانو سر اوچت کړی دی شیخ ابو غدة به وخت پر وخت د اسلامی نړۍ د ګوټ ګوټ هیوادونو لکه سودان، یمن، هند، پاکستان، اردن، ترکیه، الجزایر، عراق، قطر او اروپایی هیوادونو ته سفر کاوه او علمی او دعوتی سمینارونو کی به یی برخه اخیسته. شیخ ابوغدة ۱۹۹۵ کال کی د لندن د اکسفورډ د اسلامی مطالعاتو د مرکز لخوا د اسلام د تعریف او د حدیثو د خدمت په ویاړ د سلطان برنای د جایزی ګټونکی شو، او په همدی کال د سوریی د پخوانی ولسمشر حافظ الاسد لخوا ورته شیخ محمد سعید رمضان البوطی د منځګړی په حیث ولیږل شو چی په دی توګه یی خپله ۱۷ کلنه جلاوطنی پای ته ورسوله. شیخ ابوغدة دخپل ژوند وروستی کلونه هم د اسلام او علم خدمت ته وقف کړی و او خپل ډیر وخت یی تحقیق او تالیف ته ځانګړی کړی و. د هغه ځانګړنه په دی کی نغښتی وه چی خپل کتاب به یی له ښی کره کتنی وروسته راویست او د یو کتاب له تحقیق سره به یی خپله ځانګړی حاشیه اوفواید هم پری اضافه کول. شیخ ابوغدة د حدیثو، فقهی، تصوف، اصول حدیث، اصول فقه او جرح تعدیل په علمونو کی بډایه تصنیفات ترسره کړی چی ځینی یی په لاندی ډول دی:
+# الرفع و التکمیل فی الجرح والتعدیل للامام الکنوی (تحقیق) 
+# التصریح بما تواتر فی نزول المسیح لمحمد انورشاه کشمیری (تحقیق) 
+# رسالة المسترشدین للامام المحاسبی (تحقیق)
+# تحقیق سنن النسایی 
+# الاسناد من الدین 
+# من آداب الاسلام>
+
+شیخ ابوغدة بالاخره د ۸۰ کالو په عمر د یو اوږد خدمت او جهاد نه وروسته د ۱۹۹۶ کال ددسمبر په میاشت کی د ورپیښی ناروغۍ نه د سعودی عربستان د ملک فیصل روغتون ته راوړل شو او د ۱۹۹۷ د فبروری د میاشتی په ۱۶مه د ابدی سفر په لور رخصت شو. رحمة الله علیه 
 
 لیکوال : '''جنیدالله ظهیر'''
 
