--- a/عبدالفتاح_ابو_غده.mw
+++ b/عبدالفتاح_ابو_غده.mw
@@ -54,3 +54,12 @@
 # عربي پوهنغونډ (ویکیپېډیا)
 # د البنیان المرصوص عربی مجله- ۲۷مه ګڼه>
 # من اعلام الدعوة و الحرکة الاسلامیة المعاصرة- د ډاکټر عبدالله العقیل لیکنه
+
+[[category:فلسفه]]
+[[category:ختیځ فیلسوفان]]
+[[category:مسلمان فیلسوفان]]
+[[category:اسلام]]
+[[category:فقهیان]]
+[[category:لارښودان]]
+[[category:اتلان]]
+[[category: ]]
