--- a/عبدالفتاح_ابو_غده.mw
+++ b/عبدالفتاح_ابو_غده.mw
@@ -55,11 +55,10 @@
 # د البنیان المرصوص عربی مجله- ۲۷مه ګڼه>
 # من اعلام الدعوة و الحرکة الاسلامیة المعاصرة- د ډاکټر عبدالله العقیل لیکنه
 
-[[category:فلسفه]]
-[[category:ختیځ فیلسوفان]]
-[[category:مسلمان فیلسوفان]]
-[[category:اسلام]]
-[[category:فقهیان]]
-[[category:لارښودان]]
-[[category:اتلان]]
-[[category: ]]
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:ختیځ فیلسوفان]]
+[[وېشنيزه:مسلمان فیلسوفان]]
+[[وېشنيزه:اسلام]]
+[[وېشنيزه:فقهیان]]
+[[وېشنيزه:لارښودان]]
+[[وېشنيزه:اتلان]]
