robot  Modifying: [[ru:Ирландская Республика]]

--- a/آیرلنډ.mw
+++ b/آیرلنډ.mw
@@ -111,7 +111,7 @@ Irlande
 [[rmy:Republika Irland]]
 [[ro:Republica Irlanda]]
 [[roa-rup:Irlanda]]
-[[ru:Ирландская республика]]
+[[ru:Ирландская Республика]]
 [[sah:Ирландия Республиката]]
 [[sc:Irlanda]]
 [[scn:Irlanda]]
