--- a/احمد_شاه_مسعود.mw
+++ b/احمد_شاه_مسعود.mw
@@ -108,6 +108,9 @@
 اعلان كړ، په داسي حال كې چې احمد شاه مسعود ټولو متحدو جنګيالو ته مخكې تر عملياتو خبر وركړى وو چې د عملياتو پر مهال دي د ملكي وګړو خيال وساتي. احمد شاه مسعود د فبروري د مياشتي په ۱۲مه ورځ هوډ وكړ چې د دې ناوړه اعمالو پر سر خاوري واړوي كه څه هم چې د سياف چريكانو پكې ونډه لرله.
 خو متاسفانه چې د مسعود دې كار د خلكو له ذهنونو دا ناوړي خاطرې هم لري نكړاى شوې او سربېره پر دې  د سياف د جنګالو جنايتونو دوام وموند.
 
+==دا هم وګورﺉ==
+
+[http://pz.rawa.org/66/66massoud.htm مسعود به مراتب بیشتر از طالبان کمک خارجی دریافت میکرد]
 == باندنۍ تړنې ==
 [http://www.ahmadshahmassoud.com/| د مسعود رسمي ويبپاڼه]
 
