--- a/احمد_شاه_مسعود.mw
+++ b/احمد_شاه_مسعود.mw
@@ -110,7 +110,9 @@
 
 ==دا هم وګورﺉ==
 
-[http://pz.rawa.org/66/66massoud.htm مسعود به مراتب بیشتر از طالبان کمک خارجی دریافت میکرد]
+# [http://pz.rawa.org/66/66massoud.htm مسعود به مراتب بیشتر از طالبان کمک خارجی دریافت میکرد]
+# [http://pz.rawa.org/66/66rabbani_isi.htm چرا ربانی - مسعود در آغاز از طالبان پشتیبانی کردند؟]
+
 == باندنۍ تړنې ==
 [http://www.ahmadshahmassoud.com/| د مسعود رسمي ويبپاڼه]
 
