/* دا هم وګورﺉ */

--- a/احمد_شاه_مسعود.mw
+++ b/احمد_شاه_مسعود.mw
@@ -112,6 +112,7 @@
 
 # [http://pz.rawa.org/66/66massoud.htm مسعود به مراتب بیشتر از طالبان کمک خارجی دریافت میکرد]
 # [http://pz.rawa.org/66/66rabbani_isi.htm چرا ربانی - مسعود در آغاز از طالبان پشتیبانی کردند؟]
+[http://www.youtube.com/watch?v=QP1jFOAjRpY د افغانستان د ملي سرچینو پلورونکي خاینان خپله اعتراف کوي!!]
 
 == باندنۍ تړنې ==
 [http://www.ahmadshahmassoud.com/| د مسعود رسمي ويبپاڼه]
