--- a/د_شکیانو_ښوونځې.mw
+++ b/د_شکیانو_ښوونځې.mw
@@ -2,6 +2,10 @@
 
 ددې ښوونځی بنسټیز عمل په شک ولاړ دی، هر څه ته د شک په سترګه ګوري....
 
+شکیان د فیلسوفانو  یو ښوونځی دی، چې د فکر بنسټ یې په شک سره اېښودل شوی. دوی پدې ګروهه دی، چې انسان د پوهې او آګاهۍ ترلاسه کولو لپاره سمه سرچینه نلري، حس تېروځي او عقل دده (انسان) د تېروتنو د اصلاح توان نلري. ددوي په وینا د اشخاص د جوړښت او مزاج، ذوق، پوهې، زمان و مکان، اوضاع، احوال، روزنې، عادت او داسې نورو ادراکونو په لرلو سره یو له بله توپیر لري، او  ورځینۍ چارې په یو ډول نشي تشخصولای. نو پدې توګه باید پرېکنده حکم ورکړو، او هر څه باید په شک او ردولو سره پیل کړو.
+
+ددې ډلې بسټګر د « پیرون » ، په نامه فیلسوف دی، چې د مقدوني سکندر هم پیره و،  چۍ پدې توګه اروپاییان ددې ښوونځي غړي د پیرونیانو په نامه هم یادوي.
+
 ==اخځلیک==
 
 ** [http://www.tolafghan.com/falsafa د فلسفې ویبلاګ]
