*Empty MediaWiki Message*

--- a/کلبيان.mw
+++ b/کلبيان.mw
@@ -1,20 +1,18 @@
 [[Image:Cynics or dogies.JPG|left|thumb|250px| سپي ډوله ژوند خوښوونكي فېلسوفانو يوه ډله]]
 
 
-کلبیان (Cynics)
-(د سپي ډوله ژوند فلسفه)
-
+کلبیان (Cynics) (د سپي ډوله ژوند فلسفه)
 یو هغو څو فلسفي ښوونځیو څخه ده، چې له سکرات څخه یې سرچینه اخیتسې د د کلبیانو فلسفه ده.
+ددې ښوونځي بنسټګر انتیستنس (د سکرات له زده کوونکیو څخه ګڼل کېږي) دی.
+ددې ښوونځي لارویان په دوه وجو کلبیان یادېږي:
+--لومړې دا، چې په هغه ځای کې چې ددې ښوونځي بنسټ کېښودل شو، د سیناسارګس (Cynosarges) (سپین سپی) په نامه یادېږي. دویم دلیل دا، چې ددې ښوونځي د لارویانو د ژوند و ژواک لارې، چارې سپو ته ورته وی، نو ځکه پدې نامه یادېږي.
+کلبیان پدې ګروهه ول، چې نېکمرغۍ ته رسېدا لپاره تقوی او فضیلت اړین دی. دوی دا فضلیت او تقوی له سیاسي قدرت، ګنج، ټولنیز موقعیت او یا د ټولنیزو تړونونو رعایتول ګڼي.
+ 
+ددوي په وینا ښه ژوند له خوندونو څخه ځان لرې ساتلو، او طبعي ژوند ته په راګرځېدا ترلاسه کېدای شي. ددوي ژوند هم همدا ډول و، ټولنیزو چارو او د هغې ګټو ته نه پام کول، یواځې ریاضت ته زور ورکول ددوی د ژوند موخه وه. ددوي په ګروهه موږ باید په  ژوند کې د مرګ و تندرستۍ فکر و غم ونکړو، او دا چارې باید زموږ لپاره د فکر لامل وګرځي.  له همدې لامله نن سبا په ځینی اروپایي ژبو کې cynic بدبین او طعنه یی او نورو ته نه پام کوونکي شخص لپاره کارول کېږي. فضیلت او تقوی ترلاسه کول د کلبیانو پر وړاندې کومې ځانګړي پام ته اړتیا نه درلوده، او ټولې هغه چارې او پوهې چې د هندسې، ټنګټکور او ادبیاتو په زده کړه به یې زور راوړو، بې اهمیته بللې. په فلسفې کې به هم دوي یواځې اخلاقي اړخ ته پام کاوه. 
 
-ددې ښوونځي بنسټګر انتیستنس (د سکرات له زده کوونکیو څخه ګڼل کېږي) دی. 
+لکه څرنګه چې یادونه وشوه، ددې ښوونځي نامتو فیلسفوت انتیسېتنس او پېژندل شوې څېره یې دیوجانس (دیوجنس) کلبی (د سینوپ اهل) دي. 
 
-ددې ښوونځي لارویان په دوه وجو کلبیان یادېږي: 
-#--لومړې دا، چې په هغه ځای کې چې ددې ښوونځي بنسټ کېښودل شو، د سیناسارګس (Cynosarges) (سپین سپی) په نامه یادېږي.
-#--پیروان این مکتب را به دو دلیل کلبیان می نامند : دلیل اول محل تاسیس مدرسه آنها ست که سیناسارگس Cynosarges به معنای سگ سفید نامیده می شد . که در واقع ورزشگاهی در نزدیکی آتن بوده است.  دلیل دوم هم مربوط به نوع زندگی پیروان این مکتب می باشد.
-کلبیون معتقد به الزام وجود تقوا و فضیلتی برای رسیدن به خوشبختی بودند. آنها این فضیلت را دور از مواردی مانند قدرت سیاسی , ثروت , موقعیت اجتماعی و یا رعایت قراردادهای اجتماعی میپنداشتند . به عقیده اینان زندگی خوب و درست زندگی مبتنی بر روال طبیعت و بی نیازی است . همسو با این نظر کلبیان توصیه به برگشت به زندگی طبیعی و دوری از قراردادها و ارزشهای اجتماعی و اجتناب از لذات می کردند . زندگی خود آنان نیز بدینگونه بود به طوریکه روشی ریاضت کشانه همراه بی اعتنایی به اجتماع و ارزشهای آن پیش گرفته بودند .
-به اعتقاد کلبیون در زندگی نباید نگران مرگ و تندرستی خود و بقیه بود و از بابت این امور نباید دلواپس و نگران شد . آنها در گفتار خود نیز زبانی نیش دار و گزنده داشتند , از همین رو امروزه در بعضی از زبانهای اوروپایی cynic به شخص طعنه گو و بدبین و بی توجه به سایرین اطلاق میشود .
-ضیلت و تقوای مورد نظر کلبیان به فراگیری خاصی نیاز نداشت  و کلا امور آموزش نظیر آموزش هندسه و موسیقی و ادبیات نزد آنان بی اهمیت بود . در فلسفه هم اهم توجه آنها به اخلاق می باشد .
-همانطور که در قبل گفته شد موسس این مکتب آنتیستنس و معرفترین چهره آن دیوجانس (دیوجنس) اهل سینوپ می باشد که مطالب بعدی سایت مربوط به این دو است . از دیگر چهرههای این مکتب منیپوس و کرات میباشند . جالب است بدانیم که در میان کلبیون نام یک زن فیلسوف هم به نام هیپارچیا به چشم می خورد .
+د یادونې وړه ده، چې پدې ښوونځي کې د هیپارچیا په یوه نامتو فیلسوفه هم شته. 
 
 == تړلي موضوعګانې ==
 * [[آنتیستنس]]
