--- a/کلبيان.mw
+++ b/کلبيان.mw
@@ -20,7 +20,7 @@
 * [[هیپارچیا]]
 
 
-
+[[category:فلسفه]]
 [[category:لوديځ فيلسوفان]]
 [[category:لوديځه فلسفه]]
-[[category:فلسفه]]
+[[category:فلسفي وییپانګه]]
