--- a/ملا_صدرا.mw
+++ b/ملا_صدرا.mw
@@ -254,7 +254,7 @@
 7د اللمعة په شرحه باندې لمنلیکونه:
 
 == بهرنې تړن ==
-[دا لیکنه د ملا صدرا د ژوند ځینې اړخونو باندې رڼا اچوي http://www.kitabat.com/alherz_164.htm ]
+[http://www.kitabat.com/alherz_164.htm دا لیکنه د ملا صدرا د ژوند ځینې اړخونو باندې رڼا اچوي]
 
 
 {| class="toccolours" style="margin: 0.5em auto; clear: both; font-size: 100%; text-align: center;"
