--- a/ابن_مسكويه.mw
+++ b/ابن_مسكويه.mw
@@ -79,7 +79,7 @@ as follows:
 * [[د افغاني فيلسوفانو لړليک]]
 
 ==باندنۍ تړنې==
-* [http://www.muslimphilosophy.com/ip/rep/H042 Ibn Miskawayh, Ahmad ibn Muhammad in Muslimphilosophy.com| مسلمان فیلسوفان (محمد احمد ابن مسکویه)]
+* [http://www.muslimphilosophy.com/ip/rep/H042 Ibn Miskawayh, Ahmad ibn Muhammad in Muslimphilosophy.com| مسلمان فیلسوفان (محمد احمد ابن مسکویه]
 
 ==سرچينې==
 {{reflist}}
