/* د ايراني شكيلاك په  مقابل كى دريدل */

--- a/سپينه_ادى.mw
+++ b/سپينه_ادى.mw
@@ -10,10 +10,9 @@
 د پښتو ادب کې دميرمنو برخه –دکتاب ليكوال داسې ليکې.
 ميرمن سپينه يو ه پښتنه شاعره وه چې دوزير محمديارخان الکوزي دحکومت په وخت کې دهرات په شاوخواکې اوسيدله داميرمن دنورمحمدخان الکوزي لوروه.
 
-== د ايراني شكيلاك په  مقابل كى دريدل ==
+== د ايراني ښكيلاك په  مقابل كى دريدل ==
 کله چې ايرانيانو په کال ۱۲۵۵ه کې هرات محاصره کړ نو پښتنو ډيره په نره اوبهادرۍ دايرانيانو مقابله وکړه اودغه رنګه ايرانيان په خپل مقصد کې ناکام پاتې شول.
 په دې قامي جګړو کې شاه کامران سدوزي اووزير يارمحمد خان الکوزي دپښتنو سرداران ووچې ددې مقابلې په هر ډګر کې يې دخپلې بهادرۍ اوميړنتوب څرګندونه وکړه.
-
 
 == حماسي شاعره سپينه ادى ==
 داپښتنه شاعره سپينه هم په دې ملي جګړو کې ژوندۍ وه اودپښتنو دتورې اوننګيالي توب په ستاينه کې يې ډير خواږه اشعار ويلي دي . داسې معلوميږي چې سپينې دغه ټول حالات بالکل په خپلو ستر ګو ليدلي وو ولې چې ددغې محاصرې ټول حالات يې دسترګو ليدلي اوکتلي بيان کړي دي.
