--- a/انزايم.mw
+++ b/انزايم.mw
@@ -389,7 +389,7 @@ Enzymes are used in the [[chemical industry]] and other industrial applications 
 *[http://tutor.lscf.ucsb.edu/instdev/sears/biochemistry/tw-enz/tabs-enzymes-frames.htm Structure/Function of Enzymes], Web tutorial on enzyme structure and function.
 * [http://www.ebi.ac.uk/intenz/spotlight.jsp Enzyme spotlight] Monthly feature at the European Bioinformatics Institute on a selected enzyme.
 * [http://www.amfep.org AMFEP], Association of Manufacturers and Formulators of Enzyme Products
-* [http://www.brenda.uni-koeln.de BRENDA] database, a comprehensive compilation of information and literature references about all known enzymes; requires payment by commercial users.
+* [http://www.brenda-enzymes.org BRENDA] database, a comprehensive compilation of information and literature references about all known enzymes; requires payment by commercial users.
 * [http://www.ebi.ac.uk/thornton-srv/databases/enzymes/ Enzyme Structures Database] links to the known 3-D structure data of enzymes in the [[Protein Data Bank]].
 * [http://us.expasy.org/enzyme/ ExPASy enzyme] database, links to  [[Swiss-Prot]] sequence data, entries in other databases and to related literature searches.
 * [http://www.genome.jp/kegg/ KEGG: Kyoto Encyclopedia of Genes and Genomes] Graphical and hypertext-based information on biochemical pathways and enzymes.
