*Empty MediaWiki Message*

--- a/حسن_البنا.mw
+++ b/حسن_البنا.mw
@@ -1,3 +1,4 @@
+[[Image:Hasan al banna.jpg|left|thumb|180px|د غورځنګ مشر حسن البنا]]
 '''حسن البنا''' د مصر له نامتو مذهبي لارښودانو څخه ګڼل کېږي. دا عالم د اخوان المسلمون بنسټ اېښودونکې هم دی، چې په دې کار سره يې د اسلامي نړۍ له خوبه راویښه کړه.
 
 دې په ۱۹۰۶ز کال د مصر په [[محمودیه]] کلي په یوه متدینه او علم دوسته کورنۍ کې وزېږېد.
