--- a/حميد_مومند.mw
+++ b/حميد_مومند.mw
@@ -1,15 +1,15 @@
 [[Image:AbdulhameedMashokhel.PNG|thumb|289px|حميد مومند]]
-<font face="Tahoma">'''حميد بابا''' کابو دوه  نيمې پيړۍ پخوا د پېښور کوهاټ سړک او باړې رود پر ښۍ غاړه پراته کلي ماشو ګګر (ماشو) کې په يوه ډېر غريب چاپيريال کې د عبدالحميد ماشوخېل په نوم يوه شاعر ژوند کاوه، چې په ژوند کې يې دېرو لږو وګړو د احوال خبر واخيست، خو دپښتنو د تلپاتې دود او دستور سره سم وروسته له مړينې دېر وستايل شو، چا دپښتو ژبې بېدل، چا د پښتو ژبې سعدي او چا دوېښته چوونکي (موشګاف) لقب ورکړ.
+<font face="Tahoma">'''حميد بابا''' کابو دوه  نيمې پيړۍ پخوا د پېښور کوهاټ سړک او باړې روډ پر ښي غاړه پراته کلي ماشوګګر (ماشو) کې په يو ډېر غريب چاپيريال کې د عبدالحميد ماشوخېل په نوم يوه شاعر ژوند کاوه، چې په ژوند کې يې ډېرو لږو وګړو د احوال خبر واخيست، خو دپښتنو د تلپاتې دود او دستور سره سم وروسته له مړينې ډېر وستايل شو، چا د پښتو ژبې بېدل، چا د پښتو ژبې سعدي او چا د وېښته چوونکي (موشګاف) لقب ورکړ.
 <br>
 <br>
-د ده دپلار او يا دا چې د چا زوی دیو تر اوسه پورې کوم باوري او دقناعت وړ مأخذ هم نه شته، چې بشپړ مالومات په کې وي، خو د اوسمهالو (معاصرو) ليکوالانو له دلې څخه يوه نوماند (مشهور) ليکوال محمد اصف صميم يې د پلار نوم عبدالحق ښودلی دی. ( ۱)
+د ده دپلار او يا دا چې د چا زوی دی تر اوسه پورې کوم باوري او د قناعت وړ ماخذ هم نه شته، چې بشپړ مالومات په کې وي، خو د اوسمهالو ليکوالانو له ډلې څخه يوه نوماند ليکوال محمد اصف صميم يې د پلار نوم عبدالحق ښودلی دی. ( ۱)
 <br>
-د زوکړې ريښتينې نېټه يې نه ده څرګنده، اما داسې ګومان کيږي، چې د يوولسمې يونيزې (هجري) پيړۍ په  اواخرو کې به زوکړی وي. (۲)
+د زوکړې ريښتينې نېټه يې نه ده څرګنده، خو داسې ګومان کيږي چې د يوولسمې يونيزې (هجري) پيړۍ په  اخرو کې به زيږېدلی وي. (۲)
 <br><br>
-د پښتو ادب څېړونکو دده په ديوان کې ځينې تاريخي پېښو ته دڅنګزنو (اشارو) له امله د ده دزوی کړې نېټه په خپل خپل تحليل ښودلې ده، پوهاند حبيبي وايي، چې په (۱۱۰۰) ه ق کال زېږېدلی دی، همدغه نظر رښتين صاحب او الفت صاحب هم تأيید کړی، خو بېنوا صاحب بيا د (۱۰۷۵) ه ق ښودلې ده، ډاکترانوارالحق په دًرومرجان کې (۱۰۷۵ – ۱۰۸۰) ترمنځ ښوولې ده، همېش خليل د ورکې خزانې په لومړي ټوک کې د حميد بابا د زوکړې نېټه (۱۰۸۳) ه ق ګنلې وه، خو داسې ښکاري، چې د اورنګزېب د پاچاهۍ پر مهال يې دشعر هنګامه ګرمه وه، لکه چې وايي:
+د پښتو ادب څېړونکو دده په ديوان کې ځينې تاريخي پېښو ته دڅنګزنو (اشارو) له امله د ده د زوکړې نېټه په خپل خپل تحليل ښودلې ده. پوهاند حبيبي وايي چې په (۱۱۰۰) ه ق کال زېږېدلی دی، همدغه نظر رښتين صاحب او الفت صاحب هم تايید کړی. خوو بېنوا صاحب بيا د (۱۰۷۵) ه ق ښودلې ده، ډاکټر انوار الحق په در و مرجان کې (۱۰۷۵ – ۱۰۸۰) ترمنځ ښوولې ده. همېش خليل د ورکې خزانې په لومړي ټوک کې د حميد بابا د زوکړې نېټه (۱۰۸۳) ه ق ګنلې وه، خو داسې ښکاري چې د اورنګزېب د پاچاهۍ پر مهال يې دشعر هنګامه ګرمه وه؛ لکه چې وايي:
 
 {{شعر}}
-{{ب|په قوت د يار د در دګدايۍ|د اورنګ پادشاه تر تخت لاندې مواس شوم}}
+{{ب|په قوت د يار د در د ګدايۍ|د اورنګ پادشاه تر تخت لاندې مواس شوم}}
 {{د شعر پای}}
 
 سره له دې يې هم د اورنګزيب عالمګير مړينې (۱۱۱۸- ۱۰۶۸) ته هم په يوه بيت کې دا ډول څنګزنه (اشاره) کړې ده.
@@ -18,16 +18,15 @@
 {{ب|خه به شور نه وي د هند په ميخانه کې|چې اورنګ څخه د حکم جام نسکور شو}}
 {{د شعر پای}}
 
-څوک چې دغه مهال د شعر ويلو داسې قريحه ولري، چې مهم ټولنيز او سياسي حالات په خپل شعر کې رانغاړي، هغه به د ژوندانه د څلي په نيمايي او يا هم د ژوند پوخوالي ته رسېدلی وي، نو په همدغه لاسوند (دليل) د حميد د زوکړې نېټه موږ د دېوان د داخلي شواهدو پر بنسټ تر (۱۰۸۰) ه ق راپه دېخوا اټکل کولای شو.
+څوک چې دغه مهال د شعر ويلو داسې قريحه ولري، چې مهم ټولنيز او سياسي حالات په خپل شعر کې رانغاړي، هغه به د ژوندانه د څلي په نيمايي او يا هم د ژوند پوخوالي ته رسېدلی وي، نو په همدغه لاسوند د حميد بابا د زوکړې نېټه موږ د دېوان د دننېو شواهدو پر بنسټ تر (۱۰۸۰) ه ق راپه دېخوا اټکل کولی شو.
 <br>
-د بابا په باب دېرۍ پوهان، ليکوالان او څېړونکي  په يوه خوله دي او وايي، چې مومند دی خو قوم يې ماشوخېل دی، چې د مومندو يوه پښه ګنله کيږي؛ لکه چې وايی:
+د بابا په باب ډېر پوهان، ليکوالان او څېړونکي په يوه خوله دي او وايي چې مومند دی، خو قوم يې ماشوخېل دی، چې د مومندو يوه پښه ګڼلی کيږي؛ لکه چې وايی:
 {{شعر}}
-{{ب|دمومندو جوهر خانې لره دې راشي|که څوک غواړي ښه لعلونه يمني}}
+{{ب|د مومندو جوهر خانې لره دې راشي|که څوک غواړي ښه لعلونه يمني}}
 {{د شعر پای}}
 
-د حميد بابا د دېوان او نورو اثارو څخه دا جوتيږي، چې عبدالحميد د خپل مهال مروجه علوم لوستي ؤ او په خپل وخت کې په ملا عبدالحميد نوماند (مشهور) ؤ، د ا خبره، چې دی ملا ؤ د ده د ځينو آثارو د خطي نسخو په پای کې ليدل کيږي. (۱ )
+د حميد بابا د دېوان او نورو اثارو څخه دا جوتيږي چې عبدالحميد د خپل مهال مروجه علوم لوستي وو او په خپل وخت کې په ملا عبدالحميد نوماند وو. د ا خبره چې دی ملا وو د ده د ځينو اثارو د خطي نسخو په پای کې ليدل کيږي. (۱ )
 <br>
-په پارسي، عربي او حتا د هندي ژبې په ځينو لهجو پوهېده. همدا ډول د حميد بابا  د مړينې او مزار په باب کورني او بهرني څېړونکي او ليکوالان تر (۱۳۳۸ لمريز – ۱۹۵۹ زېږديز) پورې په دې اند وو، چې ګنې حميد مومند تر (۱۱۴۵) ه ق پورې ژوندی ؤ او يا دبلومهارت پر ژبه په همدغه کال مړ دی، خو د حميد بابا د شرعة الاسلام  په پيداکېدو سره دغه ګروهه (عقيده) واوښته او تر (۱۱۴۸) پورې يې ژوند يقيني شو، ښايي تر (۱۱۵۰) پورې ژوندی وي او دا چې د مړينې جوته نېټه يې نه ده خرګنده، خو دا ښکاره ده، چې مزار يې د ماشوګګر په هغه لويه هديره کې دی، چې د کلي ترڅنګ د خوړ پورې غاړې سوېل ده دې ته پرته ده. (۲)
+په پاړسي، عربي او هندي ژبې پوهېدو. همدا ډول د حميد بابا  د مړينې او مزار په باب کورني او بهرني څېړونکي او ليکوالان تر (۱۳۳۸ لمريز – ۱۹۵۹ زېږديز) پورې په دې اند وو، چې ګڼې حميد مومند تر (۱۱۴۵) ه ق پورې ژوندی وو او يا د بلومهرټ پر ژبه په همدغه کال مړ دی. خو، د حميد بابا د شرعة الاسلام په پيدا کېدو سره دغه ګروهه واوښته او تر (۱۱۴۸) پورې يې ژوند يقيني شو؛ ښايي تر (۱۱۵۰) پورې ژوندی وي او دا چې د مړينې جوته نېټه يې نه ده څرګنده، خو دا ښکاره ده چې مزار يې د ماشوګګر په هغه لويه هديره کې دی، چې د کلي ترڅنګ د خوړ پورې غاړې سوېل ده دې ته پرته ده. (۲)
 
-[[رفيع الله ستانکزى]] کابل نوی ښار
 [[Category: پښتانه شاعران]]
