/* دا هم وګورﺉ */

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -163,6 +163,19 @@
 د یادولو وړ ده، چې ښاغلي حکمتیار د افغانستان هغو مخورو، دینپوهانو، پخوانیو جهادي څېرو او نورو ته چې نن سبا په افغانستان یا بهر اوسېږي، څه باندې ۶۰۰۰ لیکونه لېږي، ترڅو لده سره په روانه ښکېلاک ضد جهاد کې مل شي، او د خپلو نیکونو تېر برم و شوکت یو ځبیا راژوندې کاندي. 
 دا لیکونه به په لنډ راتلونکې کې د یوه پوهنغونډ (دایرة المعارف په توګه د چاپ په ګاڼه وپسولل شي.
 
+==انځوریز ټولګه==
+
+
+<gallery>
+انځور:Eng Hikmatyar in a battle field.jpg| انجینیر حکمتیار د روس خلاف جګړې په یوه سنګر کې
+Image:Maulana_Qari_Thaib.jpg|Caption2
+Image:Alama mansour ansarii.JPG|Caption1
+Image:Alama mansour ansari.jpg|Caption1
+Image:The first president of Turky and Alama mansour seen in right side of the pic.JPG|Caption2
+Image:Example.jpg|Caption2Image:Example.jpg|Caption1
+Image:alama mansour ansari and afghan deplomats in Turkey.JPG|Caption2
+</gallery>
+
 ==دا هم وګورﺉ==
 
 **[[د افغانستان اسلامي حزب]]
