--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -26,3 +26,7 @@
 ==دا هم وګورﺉ==
 ==بهرنې تړن==
 [http://tanweer.blogfa.com/د تنویر په نامه بلاګ]
+
+www.tanweer.blogfa.com صفحه دوستداران وطن
+
+http://ketab-khana.blogfa.com/ کتابخانه تنویر - یکثری کتابهای برادر حکمتیار را میتوانید از این کتابخانه حصول کنید.
