--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -167,9 +167,9 @@
 
 
 <gallery>
-انځور:Eng Hikmatyar in a battle field.jpg| انجینیر حکمتیار د روس خلاف جګړې په یوه سنګر کې
-Image:Maulana_Qari_Thaib.jpg|Caption2
-Image:Alama mansour ansarii.JPG|Caption1
+انځور:Eng Hikmatyar in a battle field.jpg|ښاغلی حکمتیار د روس خلاف په یوه سنګر کې
+انځور:Hekmatyar1.jpg|ښاغلې حکمتیار
+As_a_prime_minister.jpg|ښاغلی حکمتیار د عظمی صدارن لپاره لوړې په حال کې
 Image:Alama mansour ansari.jpg|Caption1
 Image:The first president of Turky and Alama mansour seen in right side of the pic.JPG|Caption2
 Image:Example.jpg|Caption2Image:Example.jpg|Caption1
