--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -171,7 +171,7 @@
 انځور:Hekmatyar1.jpg|ښاغلې حکمتیار
 As_a_prime_minister.jpg|ښاغلی حکمتیار د عظمی صدارن لپاره لوړې په حال کې
 Image:Alama mansour ansari.jpg|Caption1
-Image:The first president of Turky and Alama mansour seen in right side of the pic.JPG|Caption2
+Jehadis-mar8-93.jpg|Caption2
 Image:Example.jpg|Caption2Image:Example.jpg|Caption1
 Image:alama mansour ansari and afghan deplomats in Turkey.JPG|Caption2
 </gallery>
