--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -169,11 +169,11 @@
 <gallery>
 انځور:Eng Hikmatyar in a battle field.jpg|ښاغلی حکمتیار د روس خلاف په یوه سنګر کې
 انځور:Hekmatyar1.jpg|ښاغلې حکمتیار
-As_a_prime_minister.jpg|ښاغلی حکمتیار د عظمی صدارن لپاره لوړې په حال کې
-Image:Alama mansour ansari.jpg|Caption1
-Jehadis-mar8-93.jpg|Caption2
-Image:Example.jpg|Caption2Image:Example.jpg|Caption1
-Image:alama mansour ansari and afghan deplomats in Turkey.JPG|Caption2
+انځور:As_a_prime_minister.jpg|ښاغلی حکمتیار د عظمی صدارن لپاره لوړې په حال کې
+انځور:Alama mansour ansari.jpg|Caption1
+انځور:Jehadis-mar8-93.jpg|حکمتیار
+Image:Example.jpg|Caption2
+انځور:Lafraei gulo.jpg|Caption2
 </gallery>
 
 ==دا هم وګورﺉ==
