--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -170,10 +170,9 @@
 انځور:Eng Hikmatyar in a battle field.jpg|ښاغلی حکمتیار د روس خلاف په یوه سنګر کې
 انځور:Hekmatyar1.jpg|ښاغلې حکمتیار
 انځور:As_a_prime_minister.jpg|ښاغلی حکمتیار د عظمی صدارن لپاره لوړې په حال کې
-انځور:Alama mansour ansari.jpg|Caption1
+انځور:Ghairat baheer.jpg|...
 انځور:Jehadis-mar8-93.jpg|حکمتیار
-Image:Example.jpg|Caption2
-انځور:Lafraei gulo.jpg|Caption2
+انځور:Lafraei gulo.jpg|...
 </gallery>
 
 ==دا هم وګورﺉ==
