--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -163,7 +163,7 @@
 د یادولو وړ ده، چې ښاغلي حکمتیار د افغانستان هغو مخورو، دینپوهانو، پخوانیو جهادي څېرو او نورو ته چې نن سبا په افغانستان یا بهر اوسېږي، څه باندې ۶۰۰۰ لیکونه لېږي، ترڅو لده سره په روانه ښکېلاک ضد جهاد کې مل شي، او د خپلو نیکونو تېر برم و شوکت یو ځبیا راژوندې کاندي. 
 دا لیکونه به په لنډ راتلونکې کې د یوه پوهنغونډ (دایرة المعارف په توګه د چاپ په ګاڼه وپسولل شي.
 
-==انځوریز ټولګه==
+==انځوریز البوم==
 
 
 <gallery>
