--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -36,8 +36,8 @@
 
 ==دا هم وګورﺉ==
 ==بهرنې تړن==
-[http://tanweer.blogfa.com/د تنویر په نامه بلاګ]
+[http://tanweer.blogfa.com د تنویر په نامه بلاګ]
 
-http://.tanweer.blogfa.com/  صفحه دوستداران وطن
+[http://.tanweer.blogfa.com صفحه دوستداران وطن]
 
-http://ketab-khana.blogfa.com/ کتابخانه تنویر - یکثری کتابهای برادر حکمتیار را میتوانید از این کتابخانه حصول کنید.
+[http://ketab-khana.blogfa.com کتابخانه تنویر] یکثری کتابهای برادر حکمتیار را میتوانید از این کتابخانه حصول کنید.
