/* چاپ شوي اثار */

--- a/نجيبه_سارا_بياباني.mw
+++ b/نجيبه_سارا_بياباني.mw
@@ -8,7 +8,7 @@
 نجيبه سارا بياباني په افغانستان او پښتونخوا کې ګڼ شمېر دندې ترسره کړي. د کاري ژوند پيل يې د زده کړې له کالونو نه پيل شوی او د ۱۳۵۲ لمريز کال نه تر ۱۳۷۰ لمريز کال پورې د افغانستان په راډيو کې بېلابېلې دندې ترسره کړي. د افغانستان په راډيو کې يې لومړنۍ دنده د ماشومانو د خپرونې د وياندۍ نه پېل شوې، همدا راز د ډرام او ډيالوګ په برخه کې يې تمثيل زده کړ. تر څه مودې کار ورورسته بيا د هنر او ادبياتو په څانګه کې د حرف خوش صدای خوش و آهنګ خوش، جمعه او زموږ ډالۍ د خپرونو کوربنه او د شومه دم انګازې د خپرونې جوړونکې او ډيکليمه کوونکې، د پښتنو او بلوڅو د خپرونې جوړونکې او ويانده، د روزنې څانګې پورې اړونده د کلي کور او کرهڼې د خپرونې ويانده پاتې شوې. دا چې مېرمن سارا په خپل شخصي ژوند کې هم يوه کونډه ده نو په  ۱۳۶۷ لمريز کال کې د لومړي ځل لپاره د کونډې ځوی په سريال کې د افغان ټلويزون په پرده راښکاره شوه. نوموړې په دغه سريال کې د شادګل د مور رول لوبولی. څه موده يې د قبايلو په وزارت کې د جرګې مجلې د خبريالې په توګه هم دنده ترسره کړې. کله چې د افغانستان کورنۍ جګړې تودې شوې او هغه د خپلې کورنې سره پېښور کې کډواله شوه نو هلته يې هم د ژوند و ژواک لپاره هلې ځلې پيل کړي او بېلابېلې دندې يې ترسره کړي. د کډوالۍ په کالونو کې يې د وحدت په ورځپاڼه کې د خبريالې په توګه لنډ مهاله کار کړی، تر دې وروسته يې د هېواد په ورځپاڼه کې د ښځو لپاره د ګل پاڼې ځانګړې پاڼې بنسټ کېښوده او درې کاله يې ورته ليکنې چمتو کولې، همدا راز يو نيم کال يې د پامير ورځپاڼې سره هم د خبريالې په توګه دنده ترسره کړې. د پېښور د راډيو سره يې هم قلمي همکاري کړې، او د پېښور په ټلويزون کې يې د پردې تر شا په پښتو او دري ژبو د خبرتياوو د لوستلو دنده هم سر ته رسولې. په پېښور کې يې د بي بي سي د پښتو او دري ژبې د روزنيزې پروژې د پيل هلې ځلې کړي او د نوي کور او نوي ژوند د پښتو او دري راډيويي ډرامو په بنسټ ايښودلو کې يې د افغاني ممثلينو په راټولولو کې مرسته کړې او بيا يې په همدغې راډيويي ډرامې کې د رابعه ګل رول په دواړو ژبو لوبولی او په دې روزنيزې پروژې کې يې ۵ کاله دنده ترسره کړې.
 
 == چاپ شوي اثار ==
-نجيبه سارا د ماشومتوب نه شاعري کوي او تر اوسه پورې يې د شعرونو څلور ټولګې چاپ شوي. د نجيبه سارا بياباني لومړنۍ شعري ټولګه د کابل د کورنيو جګړو ښکار شوه خو تر اوسه پورې يې چې کوم کتابونه چاپ شوي هغه په لاندې ډول دي.
+نجيبه سارا د ماشومتوب نه شاعري کوي او تر اوسه پورې يې د شعرونو څلور ټولګې چاپ شوي. لومړۍ شعري ټولګه یې د کابل د کورنيو جګړو ښکار شوه خو تر اوسه پورې يې چې کوم کتابونه چاپ شوي هغه په لاندې ډول دي.
 
 #'''د ماښامونو ډيوه''' - د شعرونو ټولګه، چاپکال (1994)
 #'''د پنجرې مرغۍ''' - د شعرونو ټولګه، چاپکال (2003)
