--- a/پاړسي_ژبه.mw
+++ b/پاړسي_ژبه.mw
@@ -308,6 +308,7 @@ Persian has likewise influenced the vocabularies of other languages, especially 
 [[eu:Persiera]]
 [[fa:زبان فارسی]]
 [[fi:Persian kieli]]
+[[hif:Persian bhasa]]
 [[fr:Persan]]
 [[ga:Peirsis]]
 [[gl:Lingua persa]]
