--- a/شفيع_الله_بابرزی.mw
+++ b/شفيع_الله_بابرزی.mw
@@ -1,1 +1,18 @@
-[[Category: پښتانه شاعران]]
+{{نابشپړ}}
+شفيع الله بابرزى د خداى بخښلي عبدالوهاب زوى په ١٣٤٠ لمريز کال د شينوارو په سپين غر ولسوالۍ کې دې دنيا ته سترگې غړولې دي.
+
+== زده کړې ==
+لومړنۍ زده کړې يې پخپله سيمه کې ترسره کړي ، وروسته يې د هلمند ولايت له کرنې ليسې څخه د دولسم ټولگي بريليک تر گوتو کړى دى .
+
+په ١٣٥٨ لمريز کال کې د کابل پوهنتون د کرنې پوهنځي پر وره ورننوت او په ١٣٦١ لمريز کال کې د لسانس بريليک تر گوتو کړ.
+
+== دندې ==
+د کورنيو چارو وزارت د خپرونو په برخه کې يې کار پيل کړ . د دې تر څنگه يې د افغانستان د ملي راډيو ټلويزيون په هنري پروگرامونو کې فعاله ونډه اخيسته . نوموړى د افغانستان په ملي راډيو ټلويزيون کې په سلگونو سندرې لري چې عبدالله مقري ، بريالي صمدي ، گلزمان ، منگل ، نغمې ، سرفراز ، اشرف گلزار ، نازيه اقبال ، گلزار عالم ، ماسټر علي حيدر او گڼو نورو د موسيقۍ په پردو کې زمزمه کړي دي .
+
+
+== ادبي ژوند ==
+د ښاغلي بابرزي د شعرونو دوه ټولگې د خيمې سيوري ته او بوره ونه د چاپ په گاڼه پسولل شوي او دوه نورې ټولگې د رنجو غرونه او په کاڼو کې خوبونه د چاپ لارې څاري .
+
+شفيع الله بابرزى دا مهال په کابل کې د يو سيمه ييز ټلويزيون شمشاد د موسيقۍ او هنز د برخې مشري کوي ، که د هغه د شعر ، هنر او ژوندانه په اړه پوښتنه يا نظر لرئ د پروگرام د نشر پر مهال نيغ په نيغه دغې شميرې ته زنگ ووهئ : 
+
+[[وېشنيزه: پښتانه شاعران]]
