/* ادبي ژوند او لیکنې */

--- a/محمد_گل_خان_مومند.mw
+++ b/محمد_گل_خان_مومند.mw
@@ -14,6 +14,7 @@
 مومند بابا په ۱۳۳۴ل كال د لويى جرګې د رييس په توګه غوره شو او خپله پښتنۍ دنده يې په ښه ډول ترسره كړه. 
 
 == ادبي ژوند او لیکنې ==
+[[انځور:له ښي خوا علامه مولانا منصور، د لغمان ملا او وزير محمد ګل خان (مومند بابا).JPG|left|thumb|230px]]
 # پښتو سيند(پښتو قاموس)
 
 # د پښتو د ژبې لياره (پښتوصرف او نحوه )
