--- a/هنګری.mw
+++ b/هنګری.mw
@@ -3,8 +3,8 @@
 |conventional_long_name = د هنګري جمهوريت
 |عام نوم = هنګري
 |بېرغ = Flag of Hungary.svg
-|نښان = Coat_of_arms_of_Hungary.png
-|نخشه = LocationHungary.png
+|نښان = Coat_of_Arms_of_Hungary.svg
+|نخشه = LocationHungary.svg
 |national_motto = none<br>Historical: [[Latin]]: ''Regnum Mariae Patrona Hungariae'' <br>([[English language|English]]: "Kingdom of Mary the Patron of Hungary")
 |ملي سرود = ''[[Himnusz|Himnusz (Isten, áldd meg a magyart)]]''<br> "Hymn (God, bless Hungarian people)"
 |رسمي ژبه = [[Hungarian language|Hungarian]] (''Magyar'')
