/* په ستورپوهنه کې لويې پوښتنې */

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -287,38 +287,17 @@ Most amateurs work at visible wavelengths, but a small minority experiment with 
 Amateur astronomers continue to make scientific contributions to the field of astronomy. Indeed, it is one of the few scientific disciplines where amateurs can still make significant contributions. Amateurs can make occultation measurements that are used to refine the orbits of minor planets. They can also discover comets, and perform regular observations of variable stars. Improvements in digital technology have allowed amateurs to make impressive advances in the field of astrophotography.
 <ref>{{cite web | url=http://www.lunar-occultations.com/iota/iotandx.htm | title = The International Occultation Timing Association  | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://cfa-www.harvard.edu/ep/comet/comet6.html | title = Edgar Wilson Award | publisher = Harvard-Smithsonian Center for Astrophysics | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.aavso.org/ | title = American Association of Variable Star Observers | publisher = AAVSO | accessdate = 2006-08-24 }}</ref>
 
-==په ستورپوهنه کې لويې پوښتنې==
-{{seealso|Unsolved problems in physics}}
-Although the scientific discipline of astronomy has made tremendous strides in understanding the nature of the universe and its contents, there remain some important unanswered questions. Answers to these may require the construction of new ground- and space-based instruments, and possibly new developments in theoretical and experimental physics.
-* What is the origin of the stellar mass spectrum? That is, why do astronomers observe the same distribution of stellar masses&mdash;the [[initial mass function]]&mdash;apparently regardless of the initial conditions?<ref>{{cite journal
- | last = Kroupa | first = Pavel
- | title=The Initial Mass Function of Stars: Evidence for Uniformity in Variable Systems 
- | journal=Science | year=2002 | volume=295 | issue=5552
- | pages=82-91
- | url=http://www.sciencemag.org/cgi/content/full/295/5552/82?ijkey=3Dzzwlrn9nK7LUM&keytype=3Dref&siteid=3Dsci
- | accessdate=2007-05-28 }}</ref> A deeper understanding of the formation of stars and planets is needed.
-* Is there other [[Extraterrestrial life|life in the Universe]]? Especially, is there other intelligent life? If so, what is the explanation for the [[Fermi paradox]]? The existence of life elsewhere has important scientific and philosophical implications.<ref>{{cite web
- | url=http://www.astrobio.net/news/article236.html
- | title = Complex Life Elsewhere in the Universe?
- | publisher = Astrobiology Magazine | accessdate = 2006-08-12 }}</ref><ref>{{cite web
- | url=http://www.bigear.org/vol1no2/sagan.htm
- | title = The Quest for Extraterrestrial Intelligence
- | publisher = Cosmic Search Magazine
- | accessdate = 2006-08-12 }}</ref>
-* What is the nature of dark matter and dark energy? These dominate the evolution and fate of the cosmos, yet we are still uncertain about their true natures.<ref name="physics questions">{{cite web | url=http://web.archive.org/web/20060203152634/http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm
- | title = 11 Physics Questions for the New Century
- | publisher = Pacific Northwest National Laboratory
- | accessdate = 2006-08-12 }}</ref>
-* Why did the universe come to be? Why, for example, are the physical constants so [[Fine-tuned universe|finely tuned]] that they permit the existence of life? Could they be the result of [[cosmological natural selection]]? What caused the [[cosmic inflation]] that produced our homogeneous universe?<ref>{{cite web
- | url=http://www.meta-library.net/cq-wein/index-frame.html
- | title = Was the Universe Designed?
- | publisher = Counterbalance Meta Library
- | accessdate = 2006-08-12 }}</ref>
-* What will be the [[ultimate fate of the universe]]?<ref>{{cite web
- | last = Hinshaw | first = Gary | date = December 15, 2005
- | url = http://map.gsfc.nasa.gov/m_uni/uni_101fate.html
- | title = What is the Ultimate Fate of the Universe?
- | publisher = NASA WMAP | accessdate = 2007-05-28 }}</ref>
+==په ستورپوهنه کې لويې پوښتنې== 
+که څه هم چې په ستورپوهنه کې د طبيعت او د کايناتو د منځپانګې او جوړښت د ښه پوهاوي او پېژندلو هڅې شوي خو لا تر اوسه پورې ګڼ شمېر پوښتنې بې ځوابه زموږ مخې ته پرتې دي. کيدای شي چې داسې بې ځوابه پوښتنو ته ځواب وييل د نوو اوزارونو د جوړښت او په فيزيک کې د نوو نظرياتو او تجربو لاسته راوړنو ته اړ وي.
+*آیا [[خاورينې سيارې]] د نورو ستورو (د لمر نه پرته) په شاوخوا کې هم شتون لري؟ ستورپوهانو د لويو ستورو او د هغوی په شاوخوا کې د نورو جسمونو په شتون ډاډه دي. نو په همدې خاطر د وړو خاورينو سيارو شتون هم يو احتمالي نظر دی.
+
+<ref>{{cite web | url = http://origins.stsci.edu/under/planets.shtml | title = Origins: Are There Other Earth-like Planets? | publisher = NASA Origins Education Forum | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+
+*آیا د کايناتو په نورو سيمو کې [[زمکنی ژوند]] شته؟ يا په ځانګړې وينا آیا انسان د کايناتو په نورو کورو کې هم ژوند کوي؟ دراین صورت چگونه [[تناقض فرمی]] ( Fermi ) را توجیه می کنید ؟ وجود [[حیات]] درخارج از کره خاکی تبلیغات علمی و فلسفی بسیار مهمی را درپی دارد . <ref>{{cite web | url = http://www.astrobio.net/news/article236.html | title = Complex Life Elsewhere in the Universe? | publisher = Astrobiology Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref><ref>{{cite web | url = http://www.bigear.org/vol1no2/sagan.htm | title = The Quest for Extraterrestrial Intelligence | publisher = Cosmic Search Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+*جنس [[توکی]] او [[اېنرژی]] له کومه ده؟ ددې ربړې پوهېدنه، د تکامل او د هغه د لاملونو او سببونو  پېژندنه يې ډېره ګټوره ده خو لا تر اوسه پورې موږ د دې ربړې په اړه هېڅ هم نه پوهېږو. 
+<ref name="physics questions">{{cite web | url = http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm | title = ۱۱ Physics Questions for the New Century | publisher = Pacific Northwest National Laboratory | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+*ولې نړۍ رامېنځ ته شوه؟ چرا برای مثال [[ثابت های فیزیکی]] با دقت تنظیم شده اند تا وجود حیات را تضمین کنند؟ چه چیزی باعث [[انبساط کیهانی]] شد و دنیا را [[همگن]] کرد ؟ 
+<ref>{{cite web | url = http://www.meta-library.net/cq-wein/index-frame.html | title = Was the Universe Designed? | publisher = Counterbalance Meta Library | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 
 ==دا هم وګورۍ==
 {{Wikiversity|Topic:ستورپوهنه}}
