--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -291,7 +291,7 @@ Amateur astronomers continue to make scientific contributions to the field of as
 که څه هم چې په ستورپوهنه کې د طبيعت او د کايناتو د منځپانګې او جوړښت د ښه پوهاوي او پېژندلو هڅې شوي خو لا تر اوسه پورې ګڼ شمېر پوښتنې بې ځوابه زموږ مخې ته پرتې دي. کيدای شي چې داسې بې ځوابه پوښتنو ته ځواب وييل د نوو اوزارونو د جوړښت او په فيزيک کې د نوو نظرياتو او تجربو لاسته راوړنو ته اړ وي.
 *آیا [[خاورينې سيارې]] د نورو ستورو (د لمر نه پرته) په شاوخوا کې هم شتون لري؟ ستورپوهانو د لويو ستورو او د هغوی په شاوخوا کې د نورو جسمونو په شتون ډاډه دي. نو په همدې خاطر د وړو خاورينو سيارو شتون هم يو احتمالي نظر دی.<ref>{{cite web | url = http://origins.stsci.edu/under/planets.shtml | title = Origins: Are There Other Earth-like Planets? | publisher = NASA Origins Education Forum | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 
-*آیا د کايناتو په نورو سيمو کې [[زمکنی ژوند]] شته؟ يا په ځانګړې وينا آیا انسان د کايناتو په نورو کورو کې هم ژوند کوي؟ دراین صورت چگونه [[تناقض فرمی]] ( Fermi ) را توجیه می کنید ؟ وجود [[حیات]] درخارج از کره خاکی تبلیغات علمی و فلسفی بسیار مهمی را درپی دارد . <ref>{{cite web | url = http://www.astrobio.net/news/article236.html | title = Complex Life Elsewhere in the Universe? | publisher = Astrobiology Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref><ref>{{cite web | url = http://www.bigear.org/vol1no2/sagan.htm | title = The Quest for Extraterrestrial Intelligence | publisher = Cosmic Search Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+*آیا د کايناتو په نورو سيمو کې [[زمکنی ژوند]] شته؟ يا په ځانګړې وينا آیا انسان د کايناتو په نورو کورو کې هم ژوند کوي؟ که داسې وي، نو د فرمي تناقض لپاره تشريح څه شی ده؟ په بل ځای کې د ژوند شتون يو ډېر اهم ساينسي او فلسفي implications لري. <ref>{{cite web | url = http://www.astrobio.net/news/article236.html | title = Complex Life Elsewhere in the Universe? | publisher = Astrobiology Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref><ref>{{cite web | url = http://www.bigear.org/vol1no2/sagan.htm | title = The Quest for Extraterrestrial Intelligence | publisher = Cosmic Search Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 *جنس [[توکی]] او [[اېنرژی]] له کومه ده؟ ددې ربړې پوهېدنه، د تکامل او د هغه د لاملونو او سببونو  پېژندنه يې ډېره ګټوره ده خو لا تر اوسه پورې موږ د دې ربړې په اړه هېڅ هم نه پوهېږو. 
 <ref name="physics questions">{{cite web | url = http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm | title = ۱۱ Physics Questions for the New Century | publisher = Pacific Northwest National Laboratory | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 *ولې نړۍ رامېنځ ته شوه؟ چرا برای مثال [[ثابت های فیزیکی]] با دقت تنظیم شده اند تا وجود حیات را تضمین کنند؟ چه چیزی باعث [[انبساط کیهانی]] شد و دنیا را [[همگن]] کرد ؟ 
