--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -292,8 +292,7 @@ Amateur astronomers continue to make scientific contributions to the field of as
 *آیا [[خاورينې سيارې]] د نورو ستورو (د لمر نه پرته) په شاوخوا کې هم شتون لري؟ ستورپوهانو د لويو ستورو او د هغوی په شاوخوا کې د نورو جسمونو په شتون ډاډه دي. نو په همدې خاطر د وړو خاورينو سيارو شتون هم يو احتمالي نظر دی.<ref>{{cite web | url = http://origins.stsci.edu/under/planets.shtml | title = Origins: Are There Other Earth-like Planets? | publisher = NASA Origins Education Forum | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 
 *آیا د کايناتو په نورو سيمو کې [[زمکنی ژوند]] شته؟ يا په ځانګړې وينا آیا انسان د کايناتو په نورو کورو کې هم ژوند کوي؟ که داسې وي، نو د فرمي تناقض لپاره تشريح څه شی ده؟ په بل ځای کې د ژوند شتون يو ډېر اهم ساينسي او فلسفي implications لري. <ref>{{cite web | url = http://www.astrobio.net/news/article236.html | title = Complex Life Elsewhere in the Universe? | publisher = Astrobiology Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref><ref>{{cite web | url = http://www.bigear.org/vol1no2/sagan.htm | title = The Quest for Extraterrestrial Intelligence | publisher = Cosmic Search Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
-*جنس [[توکی]] او [[اېنرژی]] له کومه ده؟ ددې ربړې پوهېدنه، د تکامل او د هغه د لاملونو او سببونو  پېژندنه يې ډېره ګټوره ده خو لا تر اوسه پورې موږ د دې ربړې په اړه هېڅ هم نه پوهېږو. 
-<ref name="physics questions">{{cite web | url = http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm | title = ۱۱ Physics Questions for the New Century | publisher = Pacific Northwest National Laboratory | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+*جنس [[توکی]] او [[اېنرژی]] له کومه ده؟ ددې ربړې پوهېدنه، د تکامل او د هغه د لاملونو او سببونو  پېژندنه يې ډېره ګټوره ده خو لا تر اوسه پورې موږ د دې ربړې په اړه هېڅ هم نه پوهېږو. <ref name="physics questions">{{cite web | url = http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm | title = ۱۱ Physics Questions for the New Century | publisher = Pacific Northwest National Laboratory | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 *ولې نړۍ رامېنځ ته شوه؟ چرا برای مثال [[ثابت های فیزیکی]] با دقت تنظیم شده اند تا وجود حیات را تضمین کنند؟ چه چیزی باعث [[انبساط کیهانی]] شد و دنیا را [[همگن]] کرد ؟ 
 <ref>{{cite web | url = http://www.meta-library.net/cq-wein/index-frame.html | title = Was the Universe Designed? | publisher = Counterbalance Meta Library | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 
