--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -293,8 +293,18 @@ Amateur astronomers continue to make scientific contributions to the field of as
 
 *آیا د کايناتو په نورو سيمو کې [[زمکنی ژوند]] شته؟ يا په ځانګړې وينا آیا انسان د کايناتو په نورو کورو کې هم ژوند کوي؟ که داسې وي، نو د فرمي تناقض لپاره تشريح څه شی ده؟ په بل ځای کې د ژوند شتون يو ډېر اهم ساينسي او فلسفي implications لري. <ref>{{cite web | url = http://www.astrobio.net/news/article236.html | title = Complex Life Elsewhere in the Universe? | publisher = Astrobiology Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref><ref>{{cite web | url = http://www.bigear.org/vol1no2/sagan.htm | title = The Quest for Extraterrestrial Intelligence | publisher = Cosmic Search Magazine | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
 *جنس [[توکی]] او [[اېنرژی]] له کومه ده؟ ددې ربړې پوهېدنه، د تکامل او د هغه د لاملونو او سببونو  پېژندنه يې ډېره ګټوره ده خو لا تر اوسه پورې موږ د دې ربړې په اړه هېڅ هم نه پوهېږو. <ref name="physics questions">{{cite web | url = http://www.pnl.gov/energyscience/01-02/11-questions/11questions.htm | title = ۱۱ Physics Questions for the New Century | publisher = Pacific Northwest National Laboratory | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
-*ولې نړۍ رامېنځ ته شوه؟ چرا برای مثال [[ثابت های فیزیکی]] با دقت تنظیم شده اند تا وجود حیات را تضمین کنند؟ چه چیزی باعث [[انبساط کیهانی]] شد و دنیا را [[همگن]] کرد ؟ 
-<ref>{{cite web | url = http://www.meta-library.net/cq-wein/index-frame.html | title = Was the Universe Designed? | publisher = Counterbalance Meta Library | language = English | accessdate = ۲۰۰۶-۰۸-۱۲ }}</ref>
+* ولې کاينات رامېنځ ته شول؟ د بېلګې په توګه ولې فيزيکي ثابتونه داسې په غور او دقت سره تنظيم شوي چې د ژوند د شتون ضمانت کوي؟ آيا داسې کېدای شي چې دا د طبيعي کيهاني ټاکنې يوه پايله وي؟ داسې څه وه چې د کيهاني خورېدنې سبب شول چې زموږ همډوله کاينات يې رامېنځ ته کړ؟<ref>{{cite web
+
+ | url=http://www.meta-library.net/cq-wein/index-frame.html
+ | title = Was the Universe Designed?
+ | publisher = Counterbalance Meta Library
+ | accessdate = 2006-08-12 }}</ref>
+* د کايناتو آخري قسمت به څه وي؟<ref>{{cite web
+
+ | last = Hinshaw | first = Gary | date = 2005-12-15
+ | url = http://map.gsfc.nasa.gov/m_uni/uni_101fate.html
+ | title = What is the Ultimate Fate of the Universe?
+ | publisher = NASA WMAP | accessdate = 2007-05-28 }}</ref>
 
 ==دا هم وګورۍ==
 {{Wikiversity|Topic:ستورپوهنه}}
